--- a/Redaction/Rapport_Final/Rapport.tex
+++ b/Redaction/Rapport_Final/Rapport.tex
@@ -345,157 +345,11 @@ Ils recommandent également de prendre \(K\in\{5,\dots,20\}\) pour les petites b
 \hypertarget{sec:evaluation}{%
 \section{Évaluation du modèle implémenté}\label{sec:evaluation}}
 
-\hypertarget{sec:commentEvaluer}{%
-\subsection{Comment évaluer le modèle ?}\label{sec:commentEvaluer}}
-
 Malgré l'utilisation généralisée des \emph{word embeddings}, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots.
 
-C'est pourquoi ce modèle est principalement évalué à l'aide de méthodes empiriques. Nous allons décrire dans cette partie \ref{sec:commentEvaluer} quelques méthodes que nous avons retenues pour évaluer la qualité des vecteurs-mots obtenus.
-
-\hypertarget{distance-entre-deux-mots}{%
-\subsubsection{Distance entre deux mots}\label{distance-entre-deux-mots}}
-
-L'un des enjeux principaux du modèle étant de pouvoir estimer la proximité entre deux vecteurs-mots, nous pouvons tout d'abord mesurer cette dernière par des calculs de distance.
-
-Il existe différents types de distances. Chacune d'elles possède des propriétés intéressantes et s'adaptent plus ou moins bien au problème traité. Nous avons ici retenu deux distances classiquement utilisées :
-
-\begin{itemize}
-\tightlist
-\item
-  \textbf{la distance euclidienne} : \(d_{e}(\vec{u},\vec{v}) = \left\| \vec{u} - \vec{v} \right\|_2\)\\
-  Un problème est que la longueur du vecteur mot, captée dans le cas de la distance euclidienne, est positivement corrélée à la fréquence d'apparition du mot (\cite{Schakel}). Cette information peut s'avérer utile dans l'analyse de la signification des mots, notamment lorsque l'on effectue des opérations sur les vecteurs (comme l'exemple de \(\overrightarrow{Paris} - \overrightarrow{France} + \overrightarrow{Italie} = \overrightarrow{Rome}\) dans \cite{Mikolov}).\\
-  Toutefois, cette dépendance à la fréquence d'apparition peut également fausser l'analyse. C'est pourquoi nous avons choisi, par la suite, de normaliser les vecteurs :
-  \[ d_{e}(\vec{u},\vec{v}) = \left\| \frac{\vec{u}}{\left\| \vec{u} \right\|_2} - \frac{\vec{v}}{\left\| \vec{v} \right\|_2}  \right\|_2\]
-\item
-  \textbf{la similarité cosinus} : \(d_{c}(\vec{u}, \vec{v}) = \frac{\vec{u}.\vec{v}}{\left\| \vec{u} \right\|_2 \left\| \vec{v} \right\|_2 }\).\\
-  La similarité cosinus correspond au produit scalaire entre les deux vecteurs normalisés. Elle mesure ainsi l'angle formé entre deux vecteurs-mots.\\
-  C'est la distance que de nombreux papiers fondateurs de la méthode \emph{Word2Vec} (comme \cite{Mikolov} ou \cite{Levy}) utilisent, avec l'argument selon lequel les mots apparaissant dans des contextes similaires sont groupés dans la même direction durant l'entraînement.
-  Une similarité est proche de \(+1\) si deux mots sont positivement reliés (proches), de \(-1\) s'ils sont négativement reliés (éloignés) et de 0 s'ils ne sont pas \og reliés \fg{}.\\
-  Il est toutefois délicat d'interpréter une similarité proche de \(-1\). On pourrait intuitivement penser à des antonymes, comme \og grand \fg{} et \og petit \fg{}, mais en pratique, les antonymes sont susceptibles d'apparaître dans des contextes semblables et sont donc bien souvent positivement corrélés.
-\end{itemize}
-
-\hypertarget{analyse-en-composantes-principales}{%
-\subsubsection{Analyse en Composantes Principales}\label{analyse-en-composantes-principales}}
-
-Une fois le modèle \emph{Word2Vec} entraîné, nous obtenons des \emph{word-embeddings} pour chacun de nos mots, représentés par des vecteurs de grandes dimensions (20, 50 ou même supérieures à 100).
-
-Dès lors, il devient complexe de bien observer la proximité entre deux mots. C'est pourquoi il devient utile de mobiliser des méthodes de réduction de dimensions comme l'analyse en composantes principales (ACP). En effet, l'objectif premier de cette méthode est de projeter un nuage de points sur un espace de dimension inférieure. Cela permet de rendre l'information moins redondante et plus visuelle, tout en étant le plus proche possible de la réalité.
-
-Considérons le cas où nous disposons de \(n\) individus (dans notre cas les mots) et de \(p\) variables (dans notre cas, leurs composantes ou dimensions issues du modèle \emph{Word2Vec}). On note \(X = (x_{ij})\) la matrice de taille \((n,p)\) des données brutes, où \(x_{ij}\) représente la valeur de la \(j\)-ème variable pour le \(i\)-ème individu. Afin de donner à chaque individu le même poids, nous centrons et réduisons les colonnes de notre matrice de données. On notera par la suite \(Z = (z_{ij})\) la matrice des données centrées et réduites.
-
-La construction des axes de l'ACP est faite par projection orthogonale. Nous utilisons ici le produit scalaire \(\langle x,y\rangle_{N} = ^t\!xN y\) avec la métrique \(N = diag(\frac{1}{n},...,\frac{1}{n})\). Ainsi, la projection orthogonale d'un individu \(i\) (vecteur ligne) \(z_i\) sur une droite de vecteur directeur unitaire \(v\) vaut \(z_iv\times v\) et les coordonnées de projection des \(n\) individus valent \(Zv\).
-
-Les vecteurs directeurs des axes sont définis de manière à maximiser la dispersion du nuage (son inertie) des individus projetés et conserver ainsi au mieux les distances entre les individus. L'inertie se définit comme
-\[I(Z) = \frac{1}{n} \sum \limits_{i = 1}^n d_{e}^2(z_i,\bar{z}) =
-\sum \limits_{i = 1}^n var(z^j) = p\]
-
-avec \(d_{e}(z_i,z_{i'})\) la distance euclidienne entre deux individus \(z_i\) et \(z_{i'}\) : \(d_{e}(z_i,z_{i'}) = \sum \limits_{j=1}^p (z_{ij} - z_{i'j})^2\)\footnote{Nous travaillons ici dans le cadre d'une ACP normée où la matrice \(X\) a été centrée puis réduite. La réduction de \(X\) a modifié les distances initiales entre individus (\(d_{e}(z_i,z_{i'}) \neq d_{e}(x_i,x_{i'})\)). Cela n'aurait pas été le cas si la matrice \(Y\) avait été uniquement centrée (ACP non normée).}.
-
-On trouve tout d'abord le vecteur directeur \(v_1\) qui orientera le premier axe de l'ACP grâce au programme suivant :
-\[
-v_1 =\underset{\Vert v \Vert = 1}{\mathrm{argmax~}} Var(Zv) =\underset{\Vert v \Vert = 1}{\mathrm{argmax~}} ^t\!v\ R v 
-\]
-où \(R = Var(Z) = \frac{1}{n} ^t\!Z Z\) est la matrice des corrélations entre les \(p\) variables.
-La norme du vecteur \(v\) se calcule dans ce nouvel espace comme \(\Vert v \Vert = \sqrt{\langle v,v\rangle} = \sqrt{^t\!vv} =\sqrt{ \sum \limits_{i = 1}^p v_i^2}\)
-
-Puis, on choisit \(v_2\) orthogonal à \(v_1\) tel que l'inertie soit toujours maximisée :
-\[
-v_2 =\underset{ \Vert v \Vert = 1,\,v \perp v_1}{\mathrm{argmax}}\;  Var(Zv)
-\]
-En procédant de manière séquentielle, on obtient \(q < r\) axes orthogonaux avec \(r = rg(Z)\) et \(q\) choisi par le statisticien\footnote{Différentes méthodes existent afin de déterminer le \(q\) optimal, comme la règle de Kaiser ou encore celle du coude.}.
-
-On peut montrer que \(\forall k < q\) :
-
-\begin{itemize}
-\tightlist
-\item
-  \(v_k\) est un vecteur propre associé à la k\ieme{} valeur propre \(\lambda_k\) de \(R\) ;
-\item
-  la composante principale \(Zv_k\) est centrée et \(V(Zv_k)= \lambda_k\) ;
-\item
-  Les \(Zv_k\) ne sont pas corrélés entre eux.
-\end{itemize}
-
-On obtient alors la matrice \(F = ZV\) des nouvelles coordonnées factorielles des individus, avec \(V = (v_1,\dots,v_q)\) la matrice des vecteurs propres.
-
-Nous utilisons ici l'ACP en vue d'identifier les individus (ici, nos mots) qui sont proches. Pour ce faire, il suffit de représenter les coordonnées factorielles de la matrice \(F\) dans des repères, en général en 2 dimensions pour une question de lisibilité. Deux mots apparaissant dans des contextes similaires seront proches sur ce repère et orientés dans la même direction.
-
-Enfin, pour juger de la qualité de la réduction de dimension, on calcule souvent la proportion de l'inertie totale expliquée par les \(q\) premières composantes principales.
-
-\[ \frac{V(F)}{I(Z)} = \frac{\sum \limits_{i = 1}^q \lambda_i}{p}\]
-
-\hypertarget{algorithme-t-distributed-stochastic-neighbor-embedding}{%
-\subsubsection{\texorpdfstring{Algorithme \emph{t-distributed Stochastic Neighbor Embedding}}{Algorithme t-distributed Stochastic Neighbor Embedding}}\label{algorithme-t-distributed-stochastic-neighbor-embedding}}
-
-Bien que l'ACP soit une première manière de résumer l'information contenue dans nos vecteurs, elle présente des limites, notamment dans les vecteurs aux trop grandes dimensions, pour lesquels l'inertie des premiers axes de l'ACP peut se révéler faible.
-
-Pour combler ces lacunes, un autre algorithme de réduction de dimension peut être utilisé, celui dit du \emph{t-distributed Stochastic Neighbor Embedding} (t-SNE).
-Contrairement à l'ACP, cet algorithme est stochastique et non-linéaire et il favorise l'apparition de groupes de mots proches.
-Sa philosophie demeure cependant identique : représenter dans un espace à dimension réduite notre nuage de points de manière à repérer les mots proches.
-
-La première étape de l'algorithme consiste à calculer les similarités entre les \(n\) vecteurs-mots \((x_i)_{i=1...n}\). La similarité entre \(x_i\) et \(x_j\) se mesure comme étant la probabilité conditionnelle \(p_{j|i}\) de choisir \(x_j\) comme voisin de \(x_i\), si les voisins étaient tirés au sort selon une loi \(\mathcal{N}(x_i, \sigma_i)\)\footnote{\(\sigma_i\) doit être calculé de manière à adapter la loi conditionnelle aux données. Une faible dispersion autour de \(x_i\) entraînera un \(\sigma_i\) faible et réciproquement. Il s'agit de trouver le \(\sigma_i\) qui minimise ce qui est appelé en théorie de l'information la \og perplexité \fg{}, c'est-à-dire un indicateur qui décrit à quel point une distribution de probabilité réussit à prédire un échantillon.} :
-
-\[ p_{j|i} = \frac{
-\exp\left(-\frac{(d_e(x_i - x_j))^2}{2\sigma_i^2}\right)
-}{
-\sum_{k \neq i}
-\exp\left(-\frac{(d_e(x_i - x_k))^2}{2\sigma_i^2}\right)
-}\]
-
-La seconde étape de l'algorithme consiste à trouver le nouvel espace de projection à faible nombre de dimensions.
-On appellera \(g_i\) les \(x_i\) projetés dans cet espace que l'on cherche à déterminer.
-On calcule maintenant les probabilité conditionnelles \(q_{j|i}\) de choisir \(g_j\) comme voisin de \(g_i\) en supposant que les \((g_i)_i\) suivent cette fois-ci une distribution de \emph{Student} -- d'où le nom de l'algorithme -- plutôt qu'une loi gaussienne\footnote{Dans un espace à faible dimension, la dispersion des vecteurs est réduite. La distribution de Student possède des queues plus épaisses que la loi normale, ce qui permet de mieux différencier les vecteurs distants des vecteurs similaires.}.
-
-\[ q_{j|i} = \frac{(1+ (d_e(g_i - g_j))^2)^{-1}}{\sum_{k \neq i}{(1+ (d_e(g_i - g_k))^2)^{-1}}}\]
-
-Afin d'obtenir les \(g_i\), on minimise, par descente de gradient, la divergence de Kullback--Leibler entre les distributions de probabilité P et Q des \(p_{ij}\) et \(q_{ij}\) définis par :
-\[KL(P,Q) = \sum_{i \neq j} { p_{ij} \log{\frac{p_{ij}}{q_{ij}}}} \qquad\text{avec}\qquad p_{ij} = \frac{p_{i|j} + p_{j|i}}{2n}\]
-
-Comme dans l'algorithme de l'ACP, l'algorithme de t-SNE nous permet d'obtenir une nouvelle projection des \(x_i\). Il faut cependant analyser avec précaution ses résultats. L'algorithme n'étant pas linéaire, l'interprétation de la taille des \emph{clusters} obtenus ou de la distance qui les sépare n'est alors pas directe.
-
-\hypertarget{sec:jugementHumain}{%
-\subsubsection{Jugement humain}\label{sec:jugementHumain}}
-
-Les \emph{word-embeddings} obtenus par \emph{Word2Vec} sont censés regrouper les mots qui apparaissent dans un contexte similaire. Une dernière façon de vérifier la qualité de nos vecteurs-mots est de les comparer à un jugement humain. Pour ce faire, nous utilisons la liste de référence RG-65 pour le français\footnote{Le RG-65 a fait appel à 18 évaluateurs humains. La base, initialement mobilisée dans un article anglophone (\cite{Rubenstein}) a été traduite de l'anglais.} (\cite{Boumedyen}). Elle contient 65 paires de noms communs (tableau \ref{table:human_judgement}) évaluées sur une échelle de 0 (non liés) à 4 (très liés).
-
-\begin{table}
-\begin{center}
-\begin{tabular}{|c|c|c|}
-    \hline
-    mot 1 & mot 2 & similarité  \tabularnewline
-    \hline
-    corde & sourire & 0,00   \tabularnewline
-    midi & ficelle & 0,00   \tabularnewline
-    \dots & \dots & \dots   \tabularnewline
-    corde & ficelle & 3,33   \tabularnewline
-    \dots & \dots & \dots   \tabularnewline
-    automobile & auto & 3,94   \tabularnewline
-    coq & coq & 4,00   \tabularnewline
-    \hline
- \end{tabular}
-\captionsetup{margin=0cm,format=hang,justification=justified}
-\caption{Base de données de jugement humain}\label{table:human_judgement}
-\end{center}
-\end{table}
-
-Nous calculons ensuite la corrélation de Spearman entre les similarités cosinus de ces différentes paires issues de notre modèle (notées ici \((X_i)_{i=1..n}\)) et les scores proposés ci-dessus par des êtres humains (notés ici \((Y_i)_{i=1..n}\)).
-
-La corrélation de Spearman est égale au coefficient de corrélation de Pearson calculé sur les variables de rang.
-\[
-r_s = \mathrm{corr}(\mathrm{rg}_X, \mathrm{rg}_Y) = 
-\frac{\mathrm{cov}(\mathrm{rg}_X, \mathrm{rg}_Y)}{
-\sigma_{\mathrm{rg}_X} \sigma_{\mathrm{rg}_Y}
-}
-\]
-La variable de rang \(\mathrm{rg}_{X_i}\) est définie telle que \(\mathrm{rg}_{X_i}=j \iff X_i = X_{(j)}\) (\(X_i\) est la \(j\)ème plus petite variable).
-
-Pour tester la significativité de ce coefficient, nous utilisons la loi sous \((H_0)\) de la statistique de test \(z = \arctanh(r_s) = \frac{1}{2} \ln\frac{1+r}{1-r} \overset{H_0}{\sim}\mathcal{N}(0, \frac{1}{n-3})\) et obtenons l'intervalle de confiance suivant :
-
-\[
-IC_\alpha (r_s) = \left[\tanh\left(z-\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right),
-\tanh\left(z+\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right)\right]
-\]
-avec \(q_{1-\frac{\alpha}{2}}\) le quantile d'ordre \(1-\frac{\alpha}{2}\) d'une loi \(\mathcal{N}(0, 1)\).
+C'est pourquoi ce modèle est principalement évalué à l'aide de méthodes empiriques.
+Les méthodes quelques méthodes que nous avons retenues pour évaluer la qualité des vecteurs-mots obtenus sont décrites plus précisément dans l'annexe \ref{annexe:commentEvaluer}.
+Nous les appliquerons dans les parties suivantes.
 
 \hypertarget{sec:corpusFictif}{%
 \subsection{Évaluation sur un corpus fictif}\label{sec:corpusFictif}}
@@ -503,7 +357,8 @@ avec \(q_{1-\frac{\alpha}{2}}\) le quantile d'ordre \(1-\frac{\alpha}{2}\) d'une
 Avant de nous attaquer au jeu de données complet décrit plus bas, nous avons évalué un premier corpus fictif afin de nous assurer de la robustesse et de la validité du modèle implémenté. Nous avons associé dix couples (du type {[}voiture, camion{]}), à dix mots contextes différents ({[}véhicule, moto\dots{]}).
 Le corpus fictif est formé de 10 000 phrases composées chacune d'un mot d'un couple, de cinq mots du contexte et de trois mots bruits, tous tirés aléatoirement.
 
-Nous avons ensuite mis en œuvre les différentes techniques d'évaluation\footnote{À l'exception de la méthode par \og jugement humain \fg{} puisque le corpus est ici créé fictivement par ordinateur sans prêter attention au réel sens des mots.} présentées en partie \ref{sec:commentEvaluer} sur les \emph{word-embeddings} obtenus grâce à ce corpus fictif.
+Nous avons ensuite mis en œuvre les différentes techniques d'évaluation\footnote{À l'exception de la méthode par \og jugement humain \fg{} puisque le corpus est ici créé fictivement par ordinateur sans prêter attention au réel sens des mots.}
+présentées en partie \ref{sec:commentEvaluer} sur les \emph{word-embeddings} obtenus grâce à ce corpus fictif.
 
 \begin{table}
 \begin{center}
@@ -526,7 +381,9 @@ Nous avons ensuite mis en œuvre les différentes techniques d'évaluation\footn
 \emph{Note : Paramètres utilisés : ep = 50 / lr = 0,01 / w = 5 / dim = 10.}
 \end{table}
 
-Les résultats semblent concluants : la similarité cosinus montre bien une forte corrélation entre les mots focus et contexte du corpus initial et une faible corrélation avec les mots bruits (tableau \ref{table:tableau_evaluation}). L'ACP et l'algorithme t-SNE permettent également de montrer graphiquement cette proximité (figure~\ref{fig:figure_evaluation}). Les clusters apparaissent de manière plus évidente avec t-SNE.
+Les résultats semblent concluants : la similarité cosinus montre bien une forte corrélation entre les mots focus et contexte du corpus initial et une faible corrélation avec les mots bruits (tableau \ref{table:tableau_evaluation}).
+L'ACP et l'algorithme t-SNE permettent également de montrer graphiquement cette proximité (figure~\ref{fig:figure_evaluation}).
+Les clusters apparaissent de manière plus évidente avec t-SNE.
 
 \begin{figure}
 \begin{center}
@@ -544,7 +401,8 @@ Les résultats semblent concluants : la similarité cosinus montre bien une fort
 
 Une fois nous être assurés de la bonne implémentation du modèle (partie \ref{sec:corpusFictif}) grâce au corpus fictif, nous nous sommes attachés à identifier les hyperparamètres les plus pertinents au regard des données dont nous disposons.
 
-Ces données correspondent à un ensemble de 1,3 million de tweets\footnote{Ces tweets, achetés à twitter, sont la propriété de l'Inria.} postés en France entre 2014 et 2017, supposés être représentatifs de l'ensemble de tweets nationaux publiés durant cette période.
+Ces données correspondent à un ensemble de 1,3 million de tweets\footnote{Ces tweets, achetés à twitter, sont la propriété de l'Inria.}
+postés en France entre 2014 et 2017, supposés être représentatifs de l'ensemble de tweets nationaux publiés durant cette période.
 
 Le modèle \emph{Word2Vec} version Skip-gram, décrit en partie \ref{sec:word2vec}, fait en effet intervenir un certain nombre d'hyperparamètres parmi lesquels :
 
@@ -557,13 +415,21 @@ Le modèle \emph{Word2Vec} version Skip-gram, décrit en partie \ref{sec:word2ve
 
 Or, la performance de nombreuses méthodes de \emph{machine learning}, dont \emph{Word2Vec}, dépend fortement des valeurs choisies pour ces paramètres, ces valeurs étant elles-mêmes très dépendantes des données mobilisées.
 
-Même si les méthodes d'optimisation bayésiennes deviennent de plus en plus performantes pour optimiser la valeur de ces hyperparamètres en tenant compte de leurs interactions (\cite{Hutter}), ce choix s'effectue régulièrement de manière empirique, en testant différentes valeurs d'hyperparamètres sur les données mobilisées. C'est l'approche que nous retenons ici.
+Même si les méthodes d'optimisation bayésiennes deviennent de plus en plus performantes pour optimiser la valeur de ces hyperparamètres en tenant compte de leurs interactions (\cite{Hutter}), ce choix s'effectue régulièrement de manière empirique, en testant différentes valeurs d'hyperparamètres sur les données mobilisées.
+C'est l'approche que nous retenons ici.
 
-Le package \texttt{Gensim} (\og Generate Similar \fg{}), dans lequel la méthode \emph{Word2Vec} est implémentée, est un des outils actuels les plus robustes et performants\footnote{Grâce à sa dépendance à \texttt{NumPy}, \texttt{Gensim} puise dans des bibliothèques de bas niveau. Ainsi, alors que le code de haut niveau est du Python, c'est en fait du Fortran et du C hautement optimisés qui sont utilisés, ce qui rend \texttt{Gensim} bien plus performant que \texttt{PyTorch} que nous avons utilisé pour implémenter le modèle décrit en partie \ref{sec:word2vec}.} pour la modélisation sémantique non supervisée (\cite{Rehurek}).
+Le package \texttt{Gensim} (\og Generate Similar \fg{}), dans lequel la méthode \emph{Word2Vec} est implémentée, est un des outils actuels les plus robustes et performants\footnote{Grâce à sa dépendance à \texttt{NumPy}, \texttt{Gensim} puise dans des bibliothèques de bas niveau.
+  Ainsi, alors que le code de haut niveau est du Python, c'est en fait du Fortran et du C hautement optimisés qui sont utilisés, ce qui rend \texttt{Gensim} bien plus performant que \texttt{PyTorch} que nous avons utilisé pour implémenter le modèle décrit en partie \ref{sec:word2vec}.}
+pour la modélisation sémantique non supervisée (\cite{Rehurek}).
 
 Nous avons choisi de mobiliser \texttt{Gensim} dans la suite de ce rapport, en parallèle du modèle que nous avons implémenté, en raison de son temps d'exécution bien plus rapide\footnote{À titre d'exemple, alors qu'une epoch sur l'ensemble des tweets met une vingtaine d'heures à tourner pour \og notre \fg{} modèle, elle met 1 minute via \texttt{Gensim}.}. Cette rapidité d'exécution nous a permis de réaliser des tests d'hyperparamètres plus nombreux.
 
-Pour réaliser ces tests, nous avons fait tourner le modèle \emph{Word2Vec} plusieurs fois en modifiant un à un les paramètres. Nous avons ensuite évalué ces différents modèles par la méthode du \og jugement humain \fg{} (voir partie \ref{sec:jugementHumain}) en comparant la mesure de la similarité cosinus\footnote{Nous avons également évalué les modèles en utilisant (l'inverse de) la distance euclidienne à la place de la similarité cosinus. L'effet des paramètres devient alors bien moins clair et la performance du modèle est inférieure, ce va dans le sens de l'utilisation plus fréquente de la méthode de la similarité cosinus dans la littérature.} entre deux mots obtenue à partir de notre modèle à l'évaluation subjective de cette proximité par des individus. En outre, un même modèle est lancé six fois (six \og seeds \fg{} différentes) afin de construire des intervalles de confiance de la matière décrite précédemment, en empilant les six échantillons de mesure de proximités correspondant aux six implémentations d'un même modèle\footnote{Pour chaque modèle, nous calculons les statistiques de rang des 65 paires de mots de la base de jugement humain ainsi que le rang des similarités cosinus des mots obtenus en sortie du modèle. Nous réalisons ces actions pour les six implémentations du même modèle et empilons les résultats obtenus. C'est à partir de cette base empilée de 6x65 lignes moins les données manquantes que nous calculons chaque intervalle de confiance selon la formule décrite en partie \ref{sec:jugementHumain}.}.
+Pour réaliser ces tests, nous avons fait tourner le modèle \emph{Word2Vec} plusieurs fois en modifiant un à un les paramètres. Nous avons ensuite évalué ces différents modèles par la méthode du \og jugement humain \fg{} (voir partie \ref{sec:jugementHumain}) en comparant la mesure de la similarité cosinus\footnote{Nous avons également évalué les modèles en utilisant (l'inverse de) la distance euclidienne à la place de la similarité cosinus.
+  L'effet des paramètres devient alors bien moins clair et la performance du modèle est inférieure, ce va dans le sens de l'utilisation plus fréquente de la méthode de la similarité cosinus dans la littérature.}
+entre deux mots obtenue à partir de notre modèle à l'évaluation subjective de cette proximité par des individus.
+En outre, un même modèle est lancé six fois (six \og seeds \fg{} différentes) afin de construire des intervalles de confiance de la matière décrite précédemment, en empilant les six échantillons de mesure de proximités correspondant aux six implémentations d'un même modèle\footnote{Pour chaque modèle, nous calculons les statistiques de rang des 65 paires de mots de la base de jugement humain ainsi que le rang des similarités cosinus des mots obtenus en sortie du modèle.
+  Nous réalisons ces actions pour les six implémentations du même modèle et empilons les résultats obtenus.
+  C'est à partir de cette base empilée de 6x65 lignes moins les données manquantes que nous calculons chaque intervalle de confiance selon la formule décrite en partie \ref{sec:jugementHumain}.}.
 
 \hypertarget{nombre-depochs-taille-de-fenuxeatre-et-taux-dapprentissage}{%
 \subsubsection{Nombre d'epochs, taille de fenêtre et taux d'apprentissage}\label{nombre-depochs-taille-de-fenuxeatre-et-taux-dapprentissage}}
@@ -783,12 +649,190 @@ Les mots en vert correspondent à ceux présents dans l'opération, le mot en ro
 \section*{Conclusion}\label{conclusion}}
 \addcontentsline{toc}{section}{Conclusion}
 
+\newpage
+
 \hypertarget{appendix-appendix}{%
 \appendix}
 
 
-\hypertarget{annexe-1}{%
-\section{Annexe 1}\label{annexe-1}}
+\hypertarget{annexe:commentEvaluer}{%
+\section{Comment évaluer le modèle ?}\label{annexe:commentEvaluer}}
+
+\hypertarget{distance-entre-deux-mots}{%
+\subsection{Distance entre deux mots}\label{distance-entre-deux-mots}}
+
+L'un des enjeux principaux du modèle étant de pouvoir estimer la proximité entre deux vecteurs-mots, nous pouvons tout d'abord mesurer cette dernière par des calculs de distance.
+
+Il existe différents types de distances. Chacune d'elles possède des propriétés intéressantes et s'adaptent plus ou moins bien au problème traité. Nous avons ici retenu deux distances classiquement utilisées :
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{la distance euclidienne} : \(d_{e}(\vec{u},\vec{v}) = \left\| \vec{u} - \vec{v} \right\|_2\)\\
+  Un problème est que la longueur du vecteur mot, captée dans le cas de la distance euclidienne, est positivement corrélée à la fréquence d'apparition du mot (\cite{Schakel}). Cette information peut s'avérer utile dans l'analyse de la signification des mots, notamment lorsque l'on effectue des opérations sur les vecteurs (comme l'exemple de \(\overrightarrow{Paris} - \overrightarrow{France} + \overrightarrow{Italie} = \overrightarrow{Rome}\) dans \cite{Mikolov}).\\
+  Toutefois, cette dépendance à la fréquence d'apparition peut également fausser l'analyse. C'est pourquoi nous avons choisi, par la suite, de normaliser les vecteurs :
+  \[ d_{e}(\vec{u},\vec{v}) = \left\| \frac{\vec{u}}{\left\| \vec{u} \right\|_2} - \frac{\vec{v}}{\left\| \vec{v} \right\|_2}  \right\|_2\]
+\item
+  \textbf{la similarité cosinus} : \(d_{c}(\vec{u}, \vec{v}) = \frac{\vec{u}.\vec{v}}{\left\| \vec{u} \right\|_2 \left\| \vec{v} \right\|_2 }\).\\
+  La similarité cosinus correspond au produit scalaire entre les deux vecteurs normalisés. Elle mesure ainsi l'angle formé entre deux vecteurs-mots.\\
+  C'est la distance que de nombreux papiers fondateurs de la méthode \emph{Word2Vec} (comme \cite{Mikolov} ou \cite{Levy}) utilisent, avec l'argument selon lequel les mots apparaissant dans des contextes similaires sont groupés dans la même direction durant l'entraînement.
+  Une similarité est proche de \(+1\) si deux mots sont positivement reliés (proches), de \(-1\) s'ils sont négativement reliés (éloignés) et de 0 s'ils ne sont pas \og reliés \fg{}.\\
+  Il est toutefois délicat d'interpréter une similarité proche de \(-1\). On pourrait intuitivement penser à des antonymes, comme \og grand \fg{} et \og petit \fg{}, mais en pratique, les antonymes sont susceptibles d'apparaître dans des contextes semblables et sont donc bien souvent positivement corrélés.
+\end{itemize}
+
+\hypertarget{analyse-en-composantes-principales}{%
+\subsection{Analyse en Composantes Principales}\label{analyse-en-composantes-principales}}
+
+Une fois le modèle \emph{Word2Vec} entraîné, nous obtenons des \emph{word-embeddings} pour chacun de nos mots, représentés par des vecteurs de grandes dimensions (20, 50 ou même supérieures à 100).
+
+Dès lors, il devient complexe de bien observer la proximité entre deux mots.
+C'est pourquoi il devient utile de mobiliser des méthodes de réduction de dimensions comme l'analyse en composantes principales (ACP).
+En effet, l'objectif premier de cette méthode est de projeter un nuage de points sur un espace de dimension inférieure.
+Cela permet de rendre l'information moins redondante et plus visuelle, tout en étant le plus proche possible de la réalité.
+
+Considérons le cas où nous disposons de \(n\) individus (dans notre cas les mots) et de \(p\) variables (dans notre cas, leurs composantes ou dimensions issues du modèle \emph{Word2Vec}).
+On note \(X = (x_{ij})\) la matrice de taille \((n,p)\) des données brutes, où \(x_{ij}\) représente la valeur de la \(j\)-ème variable pour le \(i\)-ème individu. Mathématiquement, pour définir l'ACP on définit deux espaces :
+
+\begin{itemize}
+\item
+  L'\emph{espace des individus}, qui est de dimension \(p\), à qui on associe une métrique \(M\) utilisée pour le produit scalaire. Dans la suite nous utiliserons \(M =I_p\) la matrice identité : la norme et le produit scalaire associés à \(M\) sont égaux à la norme et le produit scalaire eucliden.
+\item
+  L'\emph{espace des variables}, qui est de dimension \(n\), à qui on associe une métrique \(N=diag(p_1,...,p_n)\) avec \(\sum_{i=1}^np_i=1\). La matrice \(N\) représente le poids donné à chaque individus, par simplification nous utiliserons ici que des poids uniformes : \(N=\frac{1}{n}I_n\). Afin de donner le même poids à toutes les variables, chaque variable est centrée-réduite : cela revient à centrer-réduire les colonnes de notre matrice \(X\). Nous notons \(Z =\bar X= (z_{ij})\) la matrice des données centrées et réduites\footnote{Nous travaillons ici dans le cadre d'une ACP normée où la matrice \(X\) a été centrée puis réduite. La réduction de \(X\) a modifié les distances initiales entre individus (\(\langle z_i,z_{i'}\rangle_M \neq \langle x_i,x_{i'}\rangle_M\)). Cela n'aurait pas été le cas si la matrice \(X\) avait été uniquement centrée (ACP non normée).}.
+\end{itemize}
+
+Pour toute métrique \(D\) (\(D=N\) ou \(D=M\)) on associe le produit scalaire \(\langle x,y\rangle_{D} = ^t\!xD y\).
+La construction des axes de l'ACP est faite par projection orthogonale.
+La projection orthogonale d'un individu \(i\) (vecteur ligne) \(z_i\) sur une droite de vecteur directeur unitaire \(v\) vaut \(\langle {}^tz_i,v\rangle_{M}=z_i\times v\) et les coordonnées de projection des \(n\) individus valent \(Zv\).
+
+Les vecteurs directeurs des axes sont définis de manière à maximiser la dispersion du nuage (son inertie) des individus projetés et conserver ainsi au mieux les distances entre les individus. L'inertie se définit comme la dispersion du nuage de points, c'est une généralisation de la notion de variance au cadre multivarié (dispersion des données mesurées sur \(p\) variables) :
+\begin{align*}
+I(Z) &= \sum_{i = 1}^n p_i\|z_i-\bar{z}\|_M^2 \text{ avec }
+  \bar{z} = 
+  \begin{pmatrix}\bar z_{1} \\
+    \vdots \\ \bar z_{p}
+  \end{pmatrix} =
+  \begin{pmatrix}\frac 1 n \sum_{i=1}^n z_{i,1} \\
+    \vdots \\ \frac 1 n \sum_{i=1}^n z_{i,p}
+  \end{pmatrix} (= 0_{\mathbb R^p}\text{ dans notre cas})
+\\&=\sum_{i = 1}^n \frac 1 n \sum_{j=1}^p (z_{i,j} -  \bar{z}_j)^2  \text{ car }M=I_p 
+\\&=\sum_{j = 1}^p \frac 1 n \sum_{i=1}^n (z_{i,j} -  \bar{z}_j)^2
+\\&=\sum_{j = 1}^p Var(z^j)\text{, avec } z^j = 
+  \begin{pmatrix} z_{1,j} \\ \vdots \\  z_{n,j} 
+  \end{pmatrix}
+s\\ &= p \text{ car les variables sont réduites}
+\end{align*}
+
+On trouve tout d'abord le vecteur directeur \(v_1\) qui orientera le premier axe de l'ACP grâce au programme suivant :
+\[
+v_1 =\underset{\| v \|_M = 1}{\mathrm{argmax~}} 
+\underbrace{\|Zv\|_N}_{=Var(Zv)} =\underset{\| v \|_M = 1}{\mathrm{argmax~}} ^t\!v\ R v 
+\]
+où \(R = Var(Z) = \frac{1}{n} ^t\!Z Z\) est la matrice des corrélations entre les \(p\) variables.
+
+Puis, on choisit \(v_2\) orthogonal à \(v_1\) tel que l'inertie soit toujours maximisée :
+\[
+v_2 =\underset{ \| v \|_M = 1,\,v \perp v_1}{\mathrm{argmax}}\;  Var(Zv)
+\]
+En procédant de manière séquentielle, on obtient \(q < r\) axes orthogonaux avec \(r = rg(Z)\) et \(q\) choisi par le statisticien\footnote{Différentes méthodes existent afin de déterminer le \(q\) optimal, comme la règle de Kaiser ou encore celle du coude.}.
+
+On peut montrer que \(\forall k < q\) :
+
+\begin{itemize}
+\tightlist
+\item
+  \(v_k\) est un vecteur propre associé à la k\ieme{} valeur propre \(\lambda_k\) de \(R\) (les valeurs propres étant rangées par ordre croissant) ;
+\item
+  la composante principale \(Zv_k\) est centrée et \(V(Zv_k)= \lambda_k\) ;
+\item
+  les \(Zv_k\) ne sont pas corrélés entre eux.
+\end{itemize}
+
+On obtient alors la matrice \(F = ZV\) des nouvelles coordonnées factorielles des individus, avec \(V = (v_1,\dots,v_q)\) la matrice des vecteurs propres.
+
+Nous utilisons ici l'ACP en vue d'identifier les individus (ici, nos mots) qui sont proches. Pour ce faire, il suffit de représenter les coordonnées factorielles de la matrice \(F\) dans des repères, en général en 2 dimensions pour une question de lisibilité. Deux mots apparaissant dans des contextes similaires seront proches sur ce repère et orientés dans la même direction.
+
+Enfin, pour juger de la qualité de la réduction de dimension, on calcule souvent la proportion de l'inertie totale expliquée par les \(q\) premières composantes principales.
+
+\[ \frac{V(F)}{I(Z)} = \frac{\sum \limits_{i = 1}^q \lambda_i}{p}\]
+
+\hypertarget{algorithme-t-distributed-stochastic-neighbor-embedding}{%
+\subsection{\texorpdfstring{Algorithme \emph{t-distributed Stochastic Neighbor Embedding}}{Algorithme t-distributed Stochastic Neighbor Embedding}}\label{algorithme-t-distributed-stochastic-neighbor-embedding}}
+
+Bien que l'ACP soit une première manière de résumer l'information contenue dans nos vecteurs, elle présente des limites, notamment dans les vecteurs aux trop grandes dimensions, pour lesquels l'inertie des premiers axes de l'ACP peut se révéler faible.
+
+Pour combler ces lacunes, un autre algorithme de réduction de dimension peut être utilisé, celui dit du \emph{t-distributed Stochastic Neighbor Embedding} (t-SNE).
+Contrairement à l'ACP, cet algorithme est stochastique et non-linéaire et il favorise l'apparition de groupes de mots proches.
+Sa philosophie demeure cependant identique : représenter dans un espace à dimension réduite notre nuage de points de manière à repérer les mots proches.
+
+La première étape de l'algorithme consiste à calculer les similarités entre les \(n\) vecteurs-mots \((x_i)_{i=1...n}\). La similarité entre \(x_i\) et \(x_j\) se mesure comme étant la probabilité conditionnelle \(p_{j|i}\) de choisir \(x_j\) comme voisin de \(x_i\), si les voisins étaient tirés au sort selon une loi \(\mathcal{N}(x_i, \sigma_i)\)\footnote{\(\sigma_i\) doit être calculé de manière à adapter la loi conditionnelle aux données.
+  Une faible dispersion autour de \(x_i\) entraînera un \(\sigma_i\) faible et réciproquement.
+  Il s'agit de trouver le \(\sigma_i\) qui minimise ce qui est appelé en théorie de l'information la \og perplexité \fg{}, c'est-à-dire un indicateur qui décrit à quel point une distribution de probabilité réussit à prédire un échantillon.} :
+
+\[ p_{j|i} = \frac{
+\exp\left(-\frac{(d_e(x_i - x_j))^2}{2\sigma_i^2}\right)
+}{
+\sum_{k \neq i}
+\exp\left(-\frac{(d_e(x_i - x_k))^2}{2\sigma_i^2}\right)
+}\]
+
+La seconde étape de l'algorithme consiste à trouver le nouvel espace de projection à faible nombre de dimensions.
+On appellera \(g_i\) les \(x_i\) projetés dans cet espace que l'on cherche à déterminer.
+On calcule maintenant les probabilité conditionnelles \(q_{j|i}\) de choisir \(g_j\) comme voisin de \(g_i\) en supposant que les \((g_i)_i\) suivent cette fois-ci une distribution de \emph{Student} -- d'où le nom de l'algorithme -- plutôt qu'une loi gaussienne\footnote{Dans un espace à faible dimension, la dispersion des vecteurs est réduite.
+  La distribution de Student possède des queues plus épaisses que la loi normale, ce qui permet de mieux différencier les vecteurs distants des vecteurs similaires.}.
+
+\[ q_{j|i} = \frac{(1+ (d_e(g_i - g_j))^2)^{-1}}{\sum_{k \neq i}{(1+ (d_e(g_i - g_k))^2)^{-1}}}\]
+
+Afin d'obtenir les \(g_i\), on minimise, par descente de gradient, la divergence de Kullback--Leibler entre les distributions de probabilité P et Q des \(p_{ij}\) et \(q_{ij}\) définis par :
+\[KL(P,Q) = \sum_{i \neq j} { p_{ij} \log{\frac{p_{ij}}{q_{ij}}}} \qquad\text{avec}\qquad p_{ij} = \frac{p_{i|j} + p_{j|i}}{2n}\]
+
+Comme dans l'algorithme de l'ACP, l'algorithme de t-SNE nous permet d'obtenir une nouvelle projection des \(x_i\).
+Il faut cependant analyser avec précaution ses résultats. L'algorithme n'étant pas linéaire, l'interprétation de la taille des \emph{clusters} obtenus ou de la distance qui les sépare n'est alors pas directe.
+
+\hypertarget{sec:jugementHumain}{%
+\subsubsection{Jugement humain}\label{sec:jugementHumain}}
+
+Les \emph{word-embeddings} obtenus par \emph{Word2Vec} sont censés regrouper les mots qui apparaissent dans un contexte similaire.
+Une dernière façon de vérifier la qualité de nos vecteurs-mots est de les comparer à un jugement humain. Pour ce faire, nous utilisons la liste de référence RG-65 pour le français\footnote{Le RG-65 a fait appel à 18 évaluateurs humains. La base, initialement mobilisée dans un article anglophone (\cite{Rubenstein}) a été traduite de l'anglais.} (\cite{Boumedyen}).
+Elle contient 65 paires de noms communs (tableau \ref{table:human_judgement}) évaluées sur une échelle de 0 (non liés) à 4 (très liés).
+
+\begin{table}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+    \hline
+    mot 1 & mot 2 & similarité  \tabularnewline
+    \hline
+    corde & sourire & 0,00   \tabularnewline
+    midi & ficelle & 0,00   \tabularnewline
+    \dots & \dots & \dots   \tabularnewline
+    corde & ficelle & 3,33   \tabularnewline
+    \dots & \dots & \dots   \tabularnewline
+    automobile & auto & 3,94   \tabularnewline
+    coq & coq & 4,00   \tabularnewline
+    \hline
+ \end{tabular}
+\captionsetup{margin=0cm,format=hang,justification=justified}
+\caption{Base de données de jugement humain}\label{table:human_judgement}
+\end{center}
+\end{table}
+
+Nous calculons ensuite la corrélation de Spearman entre les similarités cosinus de ces différentes paires issues de notre modèle (notées ici \((X_i)_{i=1..n}\)) et les scores proposés ci-dessus par des êtres humains (notés ici \((Y_i)_{i=1..n}\)).
+
+La corrélation de Spearman est égale au coefficient de corrélation de Pearson calculé sur les variables de rang.
+\[
+r_s = \mathrm{corr}(\mathrm{rg}_X, \mathrm{rg}_Y) = 
+\frac{\mathrm{cov}(\mathrm{rg}_X, \mathrm{rg}_Y)}{
+\sigma_{\mathrm{rg}_X} \sigma_{\mathrm{rg}_Y}
+}
+\]
+La variable de rang \(\mathrm{rg}_{X_i}\) est définie telle que \(\mathrm{rg}_{X_i}=j \iff X_i = X_{(j)}\) (\(X_i\) est la \(j\)ème plus petite variable).
+
+Pour tester la significativité de ce coefficient, nous utilisons la loi sous \((H_0)\) de la statistique de test \(z = \arctanh(r_s) = \frac{1}{2} \ln\frac{1+r}{1-r} \overset{H_0}{\sim}\mathcal{N}(0, \frac{1}{n-3})\) et obtenons l'intervalle de confiance suivant :
+
+\[
+IC_\alpha (r_s) = \left[\tanh\left(z-\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right),
+\tanh\left(z+\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right)\right]
+\]
+avec \(q_{1-\frac{\alpha}{2}}\) le quantile d'ordre \(1-\frac{\alpha}{2}\) d'une loi \(\mathcal{N}(0, 1)\).
 
 \newpage
 
